# ScoutMem-X

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
configs/: dev.json  mvp1_seen.json  mvp1_unseen.json  mvp2_seen.json  mvp2_unseen.json  mvp3_seen.json  mvp3_unseen.json  mvp4_stress.json  scaffold.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AgentMarker.tsx  ApartmentScene.tsx  CameraRig.tsx  ControlBar.tsx  DecisionLog.tsx  DetectionMarker.tsx  MemoryPanel.tsx  StatusToast.tsx
frontend/src/config/: roomPositions.ts
portfolio/: scoutmem_x_writeup.md
reports/: mvp4_eval_summary.md  mvp4_review.md  mvp4_testing_plan.md
src/scoutmem_x/: __init__.py  cli.py  config.py  serialization.py
src/scoutmem_x/demo/: __init__.py  app.py  index.html  real_perception.py  renderer.py  server.py  visual_comparison.py
src/scoutmem_x/env/: __init__.py  grid_world.py  grid_world_2d.py  observation.py  scene.py
src/scoutmem_x/eval/: __init__.py  search_eval.py  stress_eval.py
src/scoutmem_x/memory/: __init__.py  retrieval.py  schema.py  update.py
src/scoutmem_x/perception/: __init__.py  adapters.py  grounding_dino.py
src/scoutmem_x/policy/: __init__.py  actions.py  active_evidence.py  passive_memory.py  reactive_baseline.py  toy_policy.py  uncertainty.py
tests/: test_cli.py  test_env_search.py  test_mvp1_eval.py  test_mvp2_memory.py  test_mvp3_active.py  test_mvp4_stress.py  test_rl_env.py  test_schemas.py  test_toy_loop.py
(+21 files in other folders)
