[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scoutmem-x"
version = "0.1.0"
description = "Phased research scaffold for ScoutMem-X"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.6",
]
demo = [
  "gradio>=4.0",
  "matplotlib>=3.8",
  "pillow>=10.0",
]
perception = [
  "transformers>=4.36",
  "torch>=2.0",
  "pillow>=10.0",
]
rl = [
  "gymnasium>=0.29",
  "stable-baselines3>=2.3",
  "numpy>=1.24",
  "faiss-cpu>=1.7",
]

[project.scripts]
scoutmemx = "scoutmem_x.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["scoutmem_x"]
